<?xml version="1.0" encoding="utf-8"?><!--
  ~ ShoppingList - A simple shopping list for Android

  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="3dp">

    <TextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/selected_directory" />

    <TextView
        android:id="@+id/title"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label"
        android:padding="5dp" />

    <View
        android:id="@+id/divider"
        style="@style/Divider"
        android:layout_below="@+id/title" />

    <ListView
        android:id="@+id/directoryListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/button_dialog_cancel"
        android:layout_below="@+id/divider" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_dialog_ok"
        android:layout_alignParentEnd="true"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_add_black_24dp" />

    <ImageButton
        android:id="@+id/button_choose_storage"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_sd_storage_black_24dp" />

    <Button
        android:id="@+id/button_dialog_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/ok" />

    <Button
        android:id="@+id/button_dialog_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/button_dialog_ok"
        android:text="@string/cancel" />

</RelativeLayout>