<!--
  ~ ShoppingList - A simple shopping list for Android
  ~

  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/shoppingListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout_add_item"
        android:layout_alignParentEnd="true"
        android:scrollbars="vertical" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/shoppingListView"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_add_black_24dp" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layout_add_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/background_light"
        android:elevation="16dp"
        android:padding="2dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/text_warn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:visibility="gone" />

        <EditText
            android:id="@+id/new_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/text_warn"
            android:hint="@string/hint_new_item"
            android:inputType="textCapSentences"
            android:singleLine="true" />

        <ImageButton
            android:id="@+id/button_add_new_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/new_item_description"
            android:contentDescription="@string/done"
            android:paddingBottom="6dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="6dp"
            android:src="@drawable/ic_done_black_36dp" />

        <EditText
            android:id="@+id/new_item_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/new_item_description"
            android:layout_toStartOf="@+id/button_add_new_item"
            android:hint="@string/hint_quantity"
            android:inputType="textCapSentences"
            android:singleLine="true" />
    </RelativeLayout>

</RelativeLayout>
